src/objects/Mandatory_fields_for_Customer_Document__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting used to maintain required fields for Customer Document</description>
    <fields>
        <fullName>Classification__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mandatory_Fields__c</fullName>
        <description>list of required fields</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mandatory Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>Object for which mandatory fields are mentioned</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Specify API name of the object</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>used to store the status</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Classification__c</fullName>
        <description>Used to store the document type of the object</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Defines the type of CPO. Eq. Quote based CPO</inlineHelpText>
        <label>Sub Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mandatory fields for Customer Document</label>
    <listViews>
        <fullName>DS_View</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Sub_Classification__c</columns>
        <columns>Status__c</columns>
        <columns>Classification__c</columns>
        <columns>Mandatory_Fields__c</columns>
        <filterScope>Everything</filterScope>
        <label>DS_View</label>
        <language>en_US</language>
    </listViews>
</CustomObject>